--- a/frontend/src/pages/Login/Login.css
+++ b/frontend/src/pages/Login/Login.css
@@ -8,9 +8,9 @@
 }
 
 .loginWrapper {
-  width: 70%;
-  height: 70%;
-  display: flex;
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  gap: 3rem;
 }
 
 .loginLeft,
@@ -26,10 +26,13 @@
   font-weight: 800;
   color: #08519c;
   margin-bottom: 10px;
+  text-align: center;
+  margin-top: 1.5rem;
 }
 
 .loginDesc {
   font-size: 24px;
+  text-align: center;
 }
 
 .loginBox {
@@ -70,8 +73,6 @@
 }
 
 .loginRegisterButton {
-  width: 60%;
-  align-self: center;
   height: 50px;
   border-radius: 10px;
   border: none;
@@ -80,4 +81,20 @@
   font-size: 20px;
   font-weight: 500;
   cursor: pointer;
+  width: 100%;
+}
+
+@media screen and (max-width: 650px) {
+  .login {
+    background-color: #f0f2f5;
+    align-items: center;
+    justify-content: center;
+    height: 0;
+  }
+  .loginWrapper {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 3rem;
+    background-color: #f0f2f5;
+  }
 }
