--- a/frontend/src/pages/Login/Login.css
+++ b/frontend/src/pages/Login/Login.css
@@ -84,6 +84,14 @@
   width: 100%;
 }
 
+.error {
+  color: rgb(253, 105, 105);
+  padding: 0.5rem;
+  margin-top: 1rem;
+  text-align: center;
+  border-radius: 0.3rem;
+}
+
 @media screen and (max-width: 650px) {
   .login {
     background-color: #f0f2f5;
