--- a/frontend/src/pages/SinglePost/SinglePost.css
+++ b/frontend/src/pages/SinglePost/SinglePost.css
@@ -9,9 +9,7 @@
 
 .comment-section {
   width: 100%;
-
   border-radius: 10px;
-  box-shadow: 0px 0px 16px -8px rgb(0 0 0 / 68%);
   margin-top: 2rem;
 }
 .comment-form {
@@ -21,6 +19,7 @@
 }
 
 .commentButton {
+  align-self: start;
   border: none;
   padding: 7px;
   border-radius: 5px;
@@ -52,6 +51,10 @@
 
 .shareInput {
   margin-bottom: 1rem;
+}
+
+.commentUser {
+  color: rgb(77, 77, 77);
 }
 
 @media screen and (max-width: 600px) {
