--- a/frontend/src/pages/Profile/Profile.css
+++ b/frontend/src/pages/Profile/Profile.css
@@ -28,6 +28,10 @@
   grid-template-columns: 1fr 1fr;
 }
 
+.preview-image {
+  width: 40%;
+}
+
 @media screen and (max-width: 600px) {
   .home-container {
     display: grid;
